# sync-with-playwright

./: .env.example  .gitignore  README.md  c  command_launcher.py  commands.json  config.py  docker-compose.yml  dropbox_client.py  env.example  file_upload.py  form-content.html  get_salesforce_page.py  instructions data.md  instructions tests.md  instructions.files.md  instructions.md  main.py  main_dropbox_analyze.py  ping_services.py  pyproject.toml  requirements.txt  run-commands.md  run_ping.sh  server.py  setup.py  special_cases.txt  start_services.py  t  test_account_delete.py  test_account_search.py  test_account_upload.py  test_accounts_create.py  test_accounts_page.py  test_accounts_query.py  test_sync.py  test_upload.py
accounts/: main.txt
chrome_extension/: README.md  background.js  com.command_launcher.json  manifest.json  native_host.py  popup.html  popup.js
docs/: FlatFile Template 5.2025.xlsx  FlatFile.5.2025.xlsx  README.codebase.md  README.design.md  README.design.sync.analyzer.md  debug_Clients.csv  instructions.cmd-runner.md  instructions.cmd-start.md  instructions.cmd.md  instructions.dropbox.md  instructions.files.md  instructions.fuzzy.md  instructions.holiday.md  instructions.sync.md  instructions.tests.md  run-commands.md
dropbox/: ping.py
dropbox_renamer/: __init__.py  cmd_analyze.py  dbx_analyze.py  dbx_rename_files_with_date.py  dropbox_files.txt  dropbox_ignore.txt  rename_files_with_date.py
dropbox_renamer/utils/: __init__.py  account_utils.py  date_utils.py  dropbox_client.py  dropbox_utils.py  file_utils.py  path_utils.py
logs/: .preserved_logs
salesforce/: __init__.py  base_page.py  browser.py  cmd_fuzzy.py  cmd_migration_analyzer.py  file_upload.py  logger.py  selectors.py
salesforce/pages/: __init__.py  account_manager.py  accounts_page.py  base_page.py  file_manager.py  files_page.py
salesforce/utils/: browser.py  debug_utils.py  file_utils.py
src/: __init__.py  cmd_start.py  command_launcher.py  commands.json  config.py  main.py  requirements.txt  server.py  setup.py  test_sync.py
src/supabase_client/: __init__.py  client.py  schema.py  utils.py
src/sync/: __init__.py  cmd_analyzer.py  cmd_cp.py  cmd_ping.py  cmd_runner.py  command_runner.py  config.py
src/tests/: test_account_creation.py  test_account_deletion.py  test_account_file_deletion.py  test_account_file_retrieval.py  test_account_file_upload.py  test_account_filter.py  test_account_search.py  test_all.py  (+1 more)
sync/: __init__.py  cmd_analyzer.py  cmd_cp.py  cmd_ping.py  config.py  dropbox_client.py  ping_services.py
tests/: __init__.py  test_account_creation.py  test_account_delete.py  test_account_deletion.py  test_account_file_delete.py  test_account_file_deletion.py  test_account_file_retrieval.py  test_account_file_upload.py  test_account_files.py  test_account_filter.py  test_account_query_and_filter.py  test_account_search.py  test_account_upload.py  test_accounts_create.py  test_accounts_fuzzy_find.py  test_accounts_query.py  test_dropbox_connection.py
(+45 files in other folders)
