[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sync"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "Salesforce and Dropbox sync tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright",
    "dropbox",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-playwright",
]

[tool.hatch.build.targets.wheel]
packages = ["sync"] 